--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>CALCULATOR</title>
+    <link rel="shortcut icon" href="images/calculator.png" type="image/x-icon">
+    
+    <title>Calculator</title>
 </head>
 <body>
     <!--Start of Everything-->
     <section class="everything">
+
         <!--Start of Calculator-->
         <section class="calculator-whole">
 
